--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
     transform: translate(-50%, -50%);
     border-radius: 15px;
     padding: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .botao{
@@ -28,6 +29,7 @@
     background-color: rgb(31, 31, 31);
     border: none;
     color: white;
+    border-radius: 10px;
 }
 
 .botao:hover {
@@ -43,5 +45,22 @@
     color: black;
     text-align: right;
     padding: 5px;
+    border-radius: 10px;
+}
+
+.centro {
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%, -50%);
+    align-items: center;
+    justify-content: center;
+}
+
+.centrotitulo {
+    position: relative;
+    left: 50%;
+    top: 10px;
+    transform: translate(-40%, -40%);
 }
 
